--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>시작 페이지</title>
+    <title>콤마페이지</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,7 +18,7 @@
             text-align: center;
             background: white;
             padding: 40px;
-            border-radius: 10px;
+            border-radius: 4px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
         }
         h1 {
@@ -35,7 +35,25 @@
 <div class="container">
     <h1>환영합니다</h1>
     <p>프로젝트 시작 페이지입니다.</p>
-    ㅎㅇㅎㅇ
+    ㅎㅇㅎㅇ1
+</div>
+
+<div class="container">
+    <h1>환영합니다</h1>
+    <p>프로젝트 시작 페이지입니다.</p>
+    ㅎㅇㅎㅇ2
+</div>
+
+<div class="container">
+    <h1>환영합니다</h1>
+    <p>프로젝트 시작 페이지입니다.</p>
+    ㅎㅇㅎㅇ3
+</div>
+
+<div class="container">
+    <h1>환영합니다</h1>
+    <p>프로젝트 시작 페이지입니다.</p>
+    ㅎㅇㅎㅇ4
 </div>
 </body>
 </html>
