--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            margin: 20px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
         .container {
