--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 20px;
+            margin: 0;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
         .container {
             text-align: center;
             background: white;
             padding: 40px;
+            margin: 20px;
             border-radius: 4px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
         }
